--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ body {
 
 <div class="page-wrapper">
   <div class="f">ДОРОГИЕ РОДНЫЕ И БЛИЗКИЕ!</div>
-  <div class="k">Совсем коро состоится наша свадьба!
+  <div class="k">Совсем cкоро состоится наша свадьба!
      Мы рады пригласить вас стать
      свидетелями этого торжества
      и разделить с нами самые
@@ -294,4 +294,5 @@ updateCountdown(); // Первый запуск
 
 
 </body>
+
 </html>
