--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@ body {
          text-align: center}
 </style>
 
-<div class="k">Ждем вас по адресу: Воронова 14/4 к1</div>
+<div class="k"> Регистрация: пр-т Металлургов, д.37а</div> 
+<div class="k">Банкетная часть: Воронова 14/4 к1</div>
+
 
 <div style="text-align: center; margin-bottom: 20px;">
 <img src="image/R.jpg" class="small-photo" alt="Описание картинки" style="border-radius: 20px;">
@@ -296,3 +298,4 @@ updateCountdown(); // Первый запуск
 </body>
 
 </html>
+
